--- a/plot.ipynb
+++ b/plot.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "1c2b9b8d",
    "metadata": {},
    "outputs": [],
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "7fcd5fba",
    "metadata": {},
    "outputs": [
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "2b87b7d3",
    "metadata": {},
    "outputs": [
@@ -201,9 +201,9 @@
    ],
    "source": [
     "#UP\n",
-    "cacu_fair_factor('rate.log')\n",
-    "cacu_oscillation_factor('rate.log', 100)\n",
-    "plot_debug_log('rate.log')"
+    "cacu_fair_factor('rate_lucp.log')\n",
+    "cacu_oscillation_factor('rate_lucp.log', 100)\n",
+    "plot_debug_log('rate_lucp.log')"
    ]
   }
  ],
